--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@
         }
 
         body {
-            background-image: url("/05.03.2023/background.jpg");
+            background-image: url("/background.jpg");
             display: flex;
         }
 
