--- a/main.css
+++ b/main.css
@@ -1,97 +1,99 @@
-.clear-float {
-    clear: both;
+body{
+    margin: 0px;
+    
 }
-        * {
-            margin: 0;
-            padding: 0;
+.khung{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    min-height: 500px;   
+    
+}
+.vien{
+    border: 10px solid #33e751;
+    text-align: center;
+    padding: 40px;
+    margin-bottom:30px ;
+    
+}
+.footer {
+    background-color: #b67a7a;
+    text-align: center;
+    padding: 10px;
+    padding: 15px;
+}
+.header {
+    background-color: dimgrey;
+    color: chartreuse;
+    padding: 20px;
+    text-align: center;
+    margin: 0 ;
+}
+.vitrimenu{
+    position: absolute;
+    left: 0;
+    top:104px;
+}
+#menu ul {
+    background: #0fbd03;
+    width: 250px;
+    padding: 0;
+    list-style-type: none;
+    text-align: left;
+  }
+  #menu li {
+    width: auto;
+    height: 40px;
+    line-height: 40px;
+    border-bottom: 1px solid #e8e8e8;
+    padding: 0 1em;
+  }
+  #menu li a {
+    text-decoration: #ccc;
+    color: #6d0808;
+    font-weight: bold;
+    display: block;
+  }
+  #menu li:hover {
+    background: #CDE2CD;
+  }
+  /* Mui ten lên dau trang */
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 60px;
+    right: 10px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #fff;
+    border: 2px solid #ccc;
+    color: white;
+    cursor: pointer;
+    border-radius: 30px;
+    opacity: 0.7;     
+    }   
+    #myBtn:hover {
+    background-color: #f1f1f1;  
+    }
+    img:hover{
+        opacity: 0.5 ;
+        transition: all .3s ease;
+    }
+    h2:hover{
+        color: red;
+        transition: all .3s ease;
+        
+    }
+    @keyframes doimau{
+        50%{
+        color: aqua;
         }
-
-        .header {
-            background-color: dimgrey;
-            color: chartreuse;
-            padding: 20px;
-            text-align: center;
-        }
-
-        h1 {
-            margin: 30px;
-            text-align: center;
-            color: rgb(248, 244, 248)
-        }
-
-        h2 {
-            text-align: center;
-            color: brown;
-            margin: 10px;
-        }
-
-        .topnav {
-            overflow: hidden;
-            background-color: #050505;
-        }
-
-        .footer {
-            background-color: #F1F1F1;
-            text-align: center;
-            padding: 10px;
-        }
-
-        /* tạo kiểu cho liên kết */
-        .topnav a {
-            float: left;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        /* thay đổi màu khi di chuột */
-        .topnav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        body {
-            background-image: url("/background.jpg");
-            display: flex;
-        }
-
-        .text-centre {
-            text-align: center;
-        }
-
-        .accordion-header {
-            background-color: #F1F1F1;
-            margin-bottom: 10px;
-            text-align: center;
-            width: 33%;
-        }
-
-        .accordion-body {
-            background-color: #f2f2f2;
-            display: none;
-        }
-
-        #wrapper {
-            max-width: 1000px;
-            margin: 0%auto;
-        }
-
-        .danhangngang {
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        .thu-nghiem-zoom img {
-            transition: all .3s ease;
-        }
-
-        .thu-nghiem-zoom img:hover {
-            transform: scale(1.3);
-            /* cỡ zoom khi di chuột vào */
-        }
-
-        .thu-nghiem-zoom div {
-            overflow: hidden;
-        }
+}
+    h1{
+        animation: doimau 4s ease infinite;
+    }
+    a{
+        text-decoration: none
+    }
