--- a/main.css
+++ b/main.css
@@ -1,21 +1,19 @@
 body{
-    margin: 0px;
-    
+    margin: 0px;   
 }
 .khung{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 40px;
-    min-height: 500px;   
-    
+    min-height: 500px;  
+    position: relative;
 }
 .vien{
     border: 10px solid #33e751;
     text-align: center;
     padding: 40px;
-    margin-bottom:30px ;
-    
+    margin-bottom:30px ;    
 }
 .footer {
     background-color: #b67a7a;
@@ -33,14 +31,17 @@ body{
 .vitrimenu{
     position: absolute;
     left: 0;
-    top:168px;
+    top: 0 ;
+    
 }
 #menu ul {
     background: #0fbd03;
     width: 250px;
+    height: fit-content;
     padding: 0;
-    list-style-type: none;
     text-align: left;
+    background-color: #ccc;
+    margin: 0;
   }
   #menu li {
     width: auto;
@@ -72,10 +73,12 @@ body{
     color: white;
     cursor: pointer;
     border-radius: 30px;
-    opacity: 0.7;     
+    scroll-behavior: smooth;
     }   
     #myBtn:hover {
     background-color: #f1f1f1;  
+    transition: 0.2s;
+    scroll-behavior: smooth;
     }
     img:hover{
         opacity: 0.5 ;
@@ -93,7 +96,7 @@ body{
 }
     h1{
         animation: doimau 4s ease infinite;
-        font-size: 70px;
+        font-size: 50px;
     }
     a{
         text-decoration: none
