--- a/main.css
+++ b/main.css
@@ -10,11 +10,42 @@ body{
         box-shadow: 0 0px 5px ;
         padding: 20px;
 } 
+.dndk{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: -75px;
+  height:100px;
+  color:white;  
+  transition: 0.5s;
+  align-items: center;
+}
+h2{
+  display: flex;
+  width: 150px;
+  height: 50px;
+  color:white;
+  justify-content: center;
+  align-items: center;   
+  transition: 0.5s;
+  background-color: #00B4CC;
+  border-radius: 2em;
+}
+h2:hover{
+  background: #03e9f4;
+    color: #fff;
+    border-radius: 1em;
+    box-shadow: 0 0 5px #03e9f4,
+                0 0 25px #03e9f4,
+                0 0 50px #03e9f4,
+                0 0 100px #03e9f4;
+  cursor: pointer;
+}
 img {
     height: 100px;
     width: 100px;
     margin: 10px;
     transition: all .3s ease;
+    border: 3px solid #ddd;
 }
 .cangiua{
     display: flex;
@@ -117,7 +148,7 @@ img:hover {
   margin-left: -550px;
 }
 .search {
-    margin-top: -235px;
+    margin-top: -210px;
     width: 100%;
     position: relative;
     display: flex;
@@ -285,6 +316,7 @@ font: normal 30px/normal "Dynalight", Helvetica, sans-serif;
 color: rgba(255,255,255,1);  
 text-decoration: normal;  
 text-align: center;  
+cursor: pointer;
 text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #ff00de , 0 0 70px #ff00de , 0 0 80px #ff00de , 0 0 100px #ff00de ;  
 -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);  
 -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);  
