--- a/main.css
+++ b/main.css
@@ -67,6 +67,7 @@ font-size: 3rem;
   font-size: 16px;
   border: none;
   transition: 1s ease;
+  min-width: 120px;
 }
 
 .dropdownhbg {
@@ -78,6 +79,7 @@ font-size: 3rem;
   display: none;
   position: absolute;
   transition: 1s ease;
+
 }
 .dropdown-contenthbg {
   display: none;
@@ -98,13 +100,13 @@ font-size: 3rem;
 .dropdown-contenthbg a {
   color: black;
   text-decoration: none;
-  min-width: 120px;
+  min-width: 170px;
   text-align: center;
-  transition: 1s ease;
+  transition: 1s ease
 
 }
 .dropdown-contenthbg a:hover {
-  background-color: #ffffff;
+  background-color: #796f6f;
   text-align: center;
   transition: 1s ease;
   cursor: pointer;
@@ -113,9 +115,11 @@ font-size: 3rem;
   display: flex;
   transition: 1s ease;
   cursor: pointer;
+  margin-left: 120px;
+  margin-top: -50px;
 } 
 .dropdownhbg:hover .dropbtnhbg {
-  background-color:  #ddd;
+  background-color:  #acaaaa;
   color: rgb(46, 27, 156);
   transition: 1s ease;
   cursor: pointer;
@@ -140,9 +144,6 @@ font-size: 3rem;
   .bar{
     transition: 1s;
   }
-   .bar:hover{
-    width: 200px;
-    transition: 1s ease;}
 
 img {
     width: 200px;
