--- a/main.css
+++ b/main.css
@@ -2,151 +2,106 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Lato", Helvetica, Arial;
-	font-size: 16px;
+  	font-size: 16px;
 }
-
+.menutrai h2{
+  box-shadow: 0 2px 1px;
+  padding: 10px;
+  margin-left: -120px;
+  max-width: 150px;
+}
 .header {
-    color: #03e9f4;
     text-align: center;
-    box-shadow: 0 0px 5px;
+    box-shadow: 0 0px 0px;
     padding: 20px;
-    background-color: antiquewhite;
+    background-color:#ffffff;
     font-style: Arial;
+    position: relative;
 }
 h1{
 font-size: 3rem;
 }
-.menuhbg{
-  box-sizing: border-box;
-  position: fixed;
-  height: 100vh;
-  background-color: rgba(255,255,255, .6);
-  transition: margin .3s linear;
+.boctrai{
+  display: flex;
+  justify-content: end;
+  margin-left: 50px;
+}
+.menutrai{
+  display: flex;
+  justify-content: start;
+  min-width: 250px;
+  padding: 20px;
+  flex-direction: column;
+  
+}
+.menutrai a{
+   display:flex;
+   justify-content: end;
+   color: aqua;
+   text-decoration: none;
+}
+.menutrai ul{
+  margin-left: -60px;
+  max-width: 150px;
+}
+.menutrai li{
+display: flex;
+align-items: end;
+padding: 10px;
+margin-left: -97px;
+box-shadow: 0 0px 5px;
+}
+.bocform{
+  margin-top: 100px;
+}
+.hangngang{
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: -75px;
+}
+.contact{
   display: flex;
   flex-direction: column;
-  transition: 1s ease;
 }
-.menuhbg ul {
-  padding-inline-start: 0px;
-  list-style-type: none;
+.text{
+  padding: 700px;
+}
+.den{
+  color: #5c3232;
+  background-color: #807777;
+  box-shadow: 5px 5px 5px;
+}
+.footer {
+  background-color: #000000;
+  color: #fffefe;
   text-align: center;
+  padding: 15px;
+  padding: 15px;
+  margin-top: 50px;
+}
+.canletrang{
+  margin-top: -360px;
+  margin-left: 200px;
+}
+.canletrang h2{
+  padding-top: 20px ;
+
+}
+.canletrang img{
+  margin-left: -400px;
+}
+.canchu{
+  max-width: 600px;
+}
+.but{
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  transition: 1s ease;
-}
-
-.menuhbg li {
-  color: #f1f1f1;
-  position: relative;
-  transition: 1s ease;
-}
-
-.menuhbg ul li>.sub-menuhbg {
-  display: none;
-  position: absolute;
-  transition: 1s ease;
-}
-
-.sub-menuhbg {
-  display: none;
-  position: absolute;
-  transition: 1s ease;
-}
-
-.menuhbg ul li:hover .sub-menuhbg {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 50px;
-  cursor: pointer;
-  transition: 1s ease;
-}
-.dropbtnhbg {
-  background-color: #ffffff;
-  padding: 16px;
-  font-size: 16px;
+  text-decoration: none;
   border: none;
-  transition: 1s ease;
-  min-width: 120px;
+  background-color: #fffefe;
+  font-size: 15px;
 }
-
-.dropdownhbg {
-  position: relative;
-  display: inline-block;
-  transition: 1s ease;
-}
-.sub-menuhbg {
-  display: none;
-  position: absolute;
-  transition: 1s ease;
-
-}
-.dropdown-contenthbg {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  text-align: center;
-  transition: 1s ease;
-
-}
-.dropdown-contenthbg ul{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  transition: 1s ease;
-}
-.dropdown-contenthbg a {
-  color: black;
-  text-decoration: none;
-  min-width: 170px;
-  text-align: center;
-  transition: 1s ease
-
-}
-.dropdown-contenthbg a:hover {
-  background-color: #796f6f;
-  text-align: center;
-  transition: 1s ease;
-  cursor: pointer;
-}
-.dropdownhbg:hover .dropdown-contenthbg {
-  display: flex;
-  transition: 1s ease;
-  cursor: pointer;
-  margin-left: 120px;
-  margin-top: -50px;
-} 
-.dropdownhbg:hover .dropbtnhbg {
-  background-color:  #acaaaa;
-  color: rgb(46, 27, 156);
-  transition: 1s ease;
-  cursor: pointer;
-}
-
-.topnavmn a {
-  float: left;
-  display: flex;
-  color: #000000;
-  text-align: center;
-  padding: 14px 14px;
-  text-decoration: none;
-  transition: 1s ease;
-}
-
-/* thay đổi màu khi di chuột */
-.topnavmn a:hover {
-  background-color: #ddd;
-  color: rgb(46, 27, 156);
-  transition: 1s ease;
-}
-  .bar{
-    transition: 1s;
-  }
-
-img {
-    width: 200px;
+.cangiua img {
+    width: 250px;
     height: 200px;
     margin: 10px;
     transition: all .5s ease;
@@ -180,8 +135,9 @@ img {
     display: flex;
     width: 100vw;
     justify-content: center;
+    margin-top: -374px;
+    margin-left: -150px;
 }
-
 .bocanh {
     margin-top: 50px;
     display: flex;
@@ -191,7 +147,7 @@ img {
     max-width: 700px;
 }
 
-img:hover {
+.cangiua img:hover {
     transform: scale(1.4);
     transition: all .3s ease;
     /* cỡ zoom khi di chuột vào */
@@ -202,8 +158,7 @@ img:hover {
     width: 100%;
     display: flex;
     justify-content: center;
-    box-shadow: 5px 4px 5px #000;
-
+    box-shadow: 0px 0px 1px#000;
 }
 
 .topnav a {
@@ -213,12 +168,14 @@ img:hover {
     text-align: center;
     padding: 14px 14px;
     text-decoration: none;
+    background-color:#ffffff;
+    min-width: 200;
 }
 
 /* thay đổi màu khi di chuột */
 .topnav a:hover {
-    background-color: #ddd;
-    color: rgb(46, 27, 156);
+    background-color:#807777;
+    color:  #000000;
     cursor: pointer;
 }
 
@@ -232,7 +189,7 @@ img:hover {
 }
 
 .menu li {
-    color: #f1f1f1;
+    color: #fffefe;
     position: relative;
 }
 
@@ -272,7 +229,7 @@ img:hover {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: #ffffff;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     text-align: center;
@@ -305,7 +262,7 @@ img:hover {
     cursor: pointer;
 } 
   .dropdown:hover .dropbtn {
-    background-color:  #ddd;
+    background-color:  #ffffff;
     color: rgb(46, 27, 156);
     transition: 0.8s ease;
     cursor: pointer;
